--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
                               </div>
                               <div class="carousel-item">
                                 <div class="row">
-                                  <div class="col-lg-2 col-md-3 cc-reference-header"> <a href="assets/images/datamining.pdf"><img
+                                  <div class="col-lg-2 col-md-3 cc-reference-header"> <a href="assets/images/datamining.pdf" target="_blank"><img
                                         src="assets/images/datamining.png" height="160px" width="160px" alt="Image" /></a>
                                     <div class="h5 pt-2">Data Mining & Data Science</div>
                                     <a href="#">
@@ -908,7 +908,7 @@
                               </div>
                               <div class="carousel-item">
                                 <div class="row">
-                                  <div class="col-lg-2 col-md-3 cc-reference-header"> <a href="assets/images/webdesigncert.jpg"><img
+                                  <div class="col-lg-2 col-md-3 cc-reference-header"> <a href="assets/images/webdescert.pdf" target="_blank"><img
                                         src="assets/images/webdesigncert.jpg" height="160px" width="160px" alt="Image" /></a>
                                     <div class="h5 pt-2">How To Become A Web Designer</div>
                                     <a href="#">
