--- a/index.html
+++ b/index.html
@@ -809,15 +809,9 @@
                     <div class="row mh-portfolio-modal-inner">
                         <div class="col-sm-5">
                             <h2>Wrap - A campanion plugin</h2>
-                            <p>Wrap is a clean and elegant Multipurpose Landing Page Template. 
-                            It will fit perfectly for Startup, Web App or any type of Web Services.
-                            It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
-                            All variations are organized separately so you can use / customize the template very easily.</p>       
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto distinctio tempore hic at possimus, suscipit debitis sunt dolorem officia consequuntur exercitationem quidem ut quisquam beatae! Doloribus magni fugit alias omnis?</p>       
                             
-                            <p>It is a clean and elegant Multipurpose Landing Page Template. 
-                            It will fit perfectly for Startup, Web App or any type of Web Services.
-                            It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
-                            All variations are organized separately so you can use / customize the template very easily.</p>      
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, a vitae, saepe delectus vel veniam debitis adipisci illum, praesentium suscipit nobis fuga est officia nulla culpa in at impedit veritatis!</p>      
                             <div class="mh-about-tag">
                                 <ul>
                                     <li><span>php</span></li>
@@ -829,14 +823,14 @@
                                     <li><span>Javascript</span></li>
                                 </ul>
                             </div>
-                            <a href="#" class="btn btn-fill">Live Demo</a>
+                            <a href="#" class="btn btn-fill">Demo</a>
                         </div>
                         <div class="col-sm-7">
                             <div class="mh-portfolio-modal-img">
                                 <img src="assets/images/pr-0.jif" alt="" class="img-fluid">
-                                <p>All variations are organized separately so you can use / customize the template very easily.</p>    
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti modi ipsum sequi ex sit corporis tempora quas sunt itaque, maiores facilis, quo deserunt tempore! Odio magnam ipsa eos iste maiores.</p>    
                                 <img src="assets/images/pr-1.jif" alt="" class="img-fluid">
-                                <p>All variations are organized separately so you can use / customize the template very easily.</p>     
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quibusdam consectetur omnis ipsa voluptatibus quae architecto maxime nisi laborum! Voluptatem est fugiat sint obcaecati numquam magni delectus incidunt libero voluptatibus.</p>     
                             </div>
                         </div>
                     </div>
