--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                                 <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Stamp is a clean and elegant Multipurpose Landing Page Template. 
                                                 It will fit perfectly for Startup, Web App or any type of Web Services.
                                                 It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
-                                                All variations are organized separately so you can use / customize the template very easily.</p>
+                                                All variations are organized separately.</p>
                                                 <a href="https://www.dprojakarta.com/" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s" target="_blank">View Details</a>
                                                 <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
                                                     <blockquote>
