--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                               <br>
 
                                 <ul class="social-icon wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                                <a href="https://drive.google.com/file/d/1YvMg6P6_9hNur-hx2PMFjaE6PyasdA2S/view" target="_blank"> <input class="btn btn-primary" type="button" value="Download CV"> </a>
+                                <a href="https://drive.google.com/file/d/1qKV5qx37Cqb8nt7kdbJAJxFTk9nWJDp5/view?usp=sharing" target="_blank"> <input class="btn btn-primary" type="button" value="Download CV"> </a>
                              </ul>
 
                             </div>
@@ -189,7 +189,7 @@
                                     <li><span>Javascript</span></li>
                                 </ul>
                             </div>
-                            <a href="https://drive.google.com/file/d/1YvMg6P6_9hNur-hx2PMFjaE6PyasdA2S/view" target="_blank" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Download CV <i class="fa fa-download"></i></a>
+                            <a href="https://drive.google.com/file/d/1qKV5qx37Cqb8nt7kdbJAJxFTk9nWJDp5/view?usp=sharing" target="_blank" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Download CV <i class="fa fa-download"></i></a>
                         </div>
                     </div>
                 </div>
@@ -268,7 +268,7 @@
                                                 <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Stamp is a clean and elegant Multipurpose Landing Page Template. 
                                                 It will fit perfectly for Startup, Web App or any type of Web Services.
                                                 It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
-                                                All variations are organized separately.</p>
+                                                All variations are organized separately so you can use / customize the template very easily.</p>
                                                 <a href="https://www.dprojakarta.com/" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s" target="_blank">View Details</a>
                                                 <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
                                                     <blockquote>
