--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
         
     </head>
     <body class="dark-vertion black-bg">
+
+
+          <!-- buat chatbot -->         
+          <div style='float: left;'> 
+           <!-- <script src="assets/component/df-btn.js" id="df-btn" project="dialogflow-web-v2" width="320px" height="400px" openText="Chat" closeText="Close" logo="assets/logo.svg" logoDark="assets/logo_dark.svg"> -->
+            <script src="assets/component/df-btn.js" id="df-btn" project="dialogflow-web-v2" width="320px" height="400px" closeText="Close" logo="assets/logo.svg" logoDark="assets/logo_dark.svg"> 
+	        </script>             
+        </div>         
+        <!-- end chatbot -->  
         
         <!-- Start Loader -->
         <div class="section-loader">
