--- a/AI.html
+++ b/AI.html
@@ -249,8 +249,8 @@ var convo = {
         answer: "tentang"
       },
       {
-        question: "github",
-        answer: "git"
+        question: "sosial media",
+        answer: "sosmed"
       },
       {
         question: "beritahu Dimas",
