--- a/AI.html
+++ b/AI.html
@@ -84,7 +84,8 @@ var chatWindow = new Bubbles(document.getElementById("chat"), "chatWindow", {
           "i-dont-get-it": {
             says: [
               "Sorry i don't understand, looks like Dimas didn't train me on that",
-              "Maaf saya tidak mengerti, sepertinya Dimas belum mengajarkan saya"
+              "Maaf saya tidak mengerti, sepertinya Dimas belum mengajarkan saya",
+	      "<img src='assets/images/confuse.gif'/>"
             ],
             reply: o.convo[o.standingAnswer].reply
           }
