--- a/index.html
+++ b/index.html
@@ -276,10 +276,8 @@
                                                 <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Dpro Jakarta</h2>
                                                 <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
                                                 <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Stamp is a clean and elegant Multipurpose Landing Page Template. 
-                                                It will fit perfectly for Startup, Web App or any type of Web Services.
-                                                It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
-                                                All variations are organized separately so you can use / customize the template very easily.</p>
-                                                <a href="https://www.dprojakarta.com/" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s" target="_blank">View Details</a>
+                                                It will fit perfectly for Startup, Web App or any type of Web Services.</p>
+                                                <a href="https://www.dprojakarta.com/" target="_blank" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s" target="_blank">View Details</a>
                                                 <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
                                                     <blockquote>
                                     					<q>Technology Quotes - You affect the world by what you browse.</q>
