--- a/index.html
+++ b/index.html
@@ -614,6 +614,7 @@
                                     <!-- Education Institutes-->
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                         <h4>Web Developer <br> <a href="https://www.dprojakarta.com/">PT. Dian Permata Omega</a></h4>
+					<div class="mh-eduyear">Jakarta</div>
                                         <div class="mh-eduyear">2020</div>
                                         <span>Responsibility :</span>
                                         <ul class="work-responsibility">
