--- a/index.html
+++ b/index.html
@@ -582,25 +582,25 @@
                                 <div class="mh-education-deatils">
                                      <!-- Education Institutes-->
                                      <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                       <h4>Universitas(University) <a href="#">Universitas Nasional Jakarta</a></h4>
+                                       <h4>Universitas (University) <br> <a href="#">Universitas Nasional Jakarta</a></h4>
                                        <div class="mh-eduyear">2018</div>
                                        <p>Information System degree or IT</p>
                                    </div> 
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                        <h4>Sekolah Menengah Akhir(Senior High School) <a href="#">SMA Muhammadiyah 3 Jakarta</a></h4>
+                                        <h4>Sekolah Menengah Akhir (Senior High School) <br> <a href="#">SMA Muhammadiyah 3 Jakarta</a></h4>
                                         <div class="mh-eduyear">2010-2013</div>
                                         <p>Has attended senior high school for 3 years</p>
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                                        <h4>Sekolah Menengah Pertama(Junior High School) <a href="#">SMP Triguna, Jakarta</a></h4>
+                                        <h4>Sekolah Menengah Pertama (Junior High School) <br> <a href="#">SMP Triguna, Jakarta</a></h4>
                                         <div class="mh-eduyear">2006-2010</div>
                                         <p>Has attended junior high school for 3 years </p>
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                                        <h4>Sekolah Dasar(Primary School) <a href="#">SDI Al Azhar, Jakarta</a></h4>
+                                        <h4>Sekolah Dasar (Primary School) <br> <a href="#">SDI Al Azhar, Jakarta</a></h4>
                                         <div class="mh-eduyear">2001-2006</div>
                                         <p>Attended primary school education for 6 years </p>
                                     </div>
