--- a/index.html
+++ b/index.html
@@ -594,7 +594,8 @@
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                                        <h4>Sekolah Menengah Pertama (Junior High School) <br> <a href="#">SMP Triguna, Jakarta</a></h4>
+                                        <h4>Sekolah Menengah Pertama (Junior High School) <br> <a href="#">SMP Triguna</a></h4>
+					    <h4>Jakarta</h4>
                                         <div class="mh-eduyear">2006-2010</div>
                                         <p>Has attended junior high school for 3 years </p>
                                     </div>                                
