--- a/index.html
+++ b/index.html
@@ -582,13 +582,15 @@
                                 <div class="mh-education-deatils">
                                      <!-- Education Institutes-->
                                      <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                       <h4>Universitas (University) <br> <a href="#">Universitas Nasional Jakarta</a></h4>
+                                       <h4>Universitas (University) <br> <a href="#">Universitas Nasional</a></h4>
+					     <div class="mh-eduyear">Jakarta</div>
                                        <div class="mh-eduyear">2018</div>
                                        <p>Information System degree or IT</p>
                                    </div> 
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                        <h4>Sekolah Menengah Akhir (Senior High School) <br> <a href="#">SMA Muhammadiyah 3 Jakarta</a></h4>
+                                        <h4>Sekolah Menengah Akhir (Senior High School) <br> <a href="#">SMA Muhammadiyah 3</a></h4>
+					    <div class="mh-eduyear">Jakarta</div>
                                         <div class="mh-eduyear">2010-2013</div>
                                         <p>Has attended senior high school for 3 years</p>
                                     </div>                                
