--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                                 <div class="mh-experience-deatils">                             
                                     <!-- Education Institutes-->
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                                        <h4>Web Developer <br> <a href="https://www.dprojakarta.com/">PT. Dian Permata Omega</a></h4>
+                                        <h4>Web Developer <br> <a href="https://www.dprojakarta.com/" target="_blank">PT. Dian Permata Omega</a></h4>
 					<div class="mh-eduyear">Jakarta</div>
                                         <div class="mh-eduyear">2020</div>
                                         <span>Responsibility :</span>
