--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 --> 
                                 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#mh-blog">Blog</a>
+                                    <a class="nav-link" href="http://dimasfathblog.epizy.com/">Blog</a>
                                 </li>
                               
                                 <li class="nav-item">
