--- a/AI.html
+++ b/AI.html
@@ -417,7 +417,8 @@ var convo = {
 //function kirim pesan
 sendEmail = function() { 
       Email.send({ 
-        SecureToken : "c2127c4d-aaca-4af1-bdb3-5ea42a33bf34",
+        //SecureToken : "c2127c4d-aaca-4af1-bdb3-5ea42a33bf34",
+	SecureToken : "cb1e1927-945a-41e8-95c6-3ad6822948d4",
         Host: "smtp.gmail.com", 
         Username: "botdim94@gmail.com", 
         Password: "robotpunyagua", 
@@ -435,7 +436,8 @@ sendEmail = function() {
     //function kirim pesan english
     sendEmaileng = function() { 
       Email.send({ 
-        SecureToken : "c2127c4d-aaca-4af1-bdb3-5ea42a33bf34",
+        //SecureToken : "c2127c4d-aaca-4af1-bdb3-5ea42a33bf34",
+	SecureToken : "cb1e1927-945a-41e8-95c6-3ad6822948d4",
         Host: "smtp.gmail.com", 
         Username: "botdim94@gmail.com", 
         Password: "robotpunyagua", 
