--- a/AI.html
+++ b/AI.html
@@ -419,7 +419,7 @@ sendEmail = function() {
       Email.send({ 
         //SecureToken : "c2127c4d-aaca-4af1-bdb3-5ea42a33bf34",
 	SecureToken : "cb1e1927-945a-41e8-95c6-3ad6822948d4",
-        Host: "smtp.elastice.com", 
+        Host: "smtp.elasticemail.com", 
         Username: "botdim94@gmail.com", 
         Password: "robotpunyagua", 
         To: 'dimasfathulyaqin@gmail.com', 
