--- a/AI.html
+++ b/AI.html
@@ -419,7 +419,7 @@ sendEmail = function() {
       Email.send({ 
         //SecureToken : "c2127c4d-aaca-4af1-bdb3-5ea42a33bf34",
 	SecureToken : "f85f2711-ac69-4e1c-a267-9ff3b3df5de7",
-        Host: "smtp.elasticemail.com", 
+        Host: "smtp.gmail.com", 
         Username: "botdim94@gmail.com", 
         Password: "robotpunyagua", 
         To: 'dimasfathulyaqin@gmail.com', 
