--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="col-sm-6">
                             <div class="hero-img wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                 <div class="img-border">
-                                   <a href="index.html"> <img src="assets/images/dimas.png" alt=""  class="img-fluid" height="620px" width="620px"></a>
+                                   <a href="index.html"> <img src="assets/images/dimasfath.jpg" alt=""  class="img-fluid" height="620px" width="620px"></a>
                                 </div>
                             </div>
                         </div>
