--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 </div>
                                 
                                 <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Dimas Fathulyaqin</h2>
-                                <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Programmer</h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Programmer / Developer</h4>
                                 
                                 <ul>
                                     <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i class="fa fa-envelope"></i><a href="mailto:">dimasfathulyaqin@gmail.com</a></li>
@@ -152,7 +152,7 @@
                               <br>
 
                                 <ul class="social-icon wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                                <a href="https://drive.google.com/file/d/1qKV5qx37Cqb8nt7kdbJAJxFTk9nWJDp5/view?usp=sharing" target="_blank"> <input class="btn btn-primary" type="button" value="Download CV"> </a>
+                                <a href="https://drive.google.com/file/d/1O6axi2Fy-oXbeWdOxRQSIGwRxSRLY7NT/view?usp=sharing" target="_blank"> <input class="btn btn-primary" type="button" value="Download CV"> </a>
                              </ul>
 
                             </div>
@@ -198,7 +198,7 @@
                                     <li><span>Javascript</span></li>
                                 </ul>
                             </div>
-                            <a href="https://drive.google.com/file/d/1qKV5qx37Cqb8nt7kdbJAJxFTk9nWJDp5/view?usp=sharing" target="_blank" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Download CV <i class="fa fa-download"></i></a>
+                            <a href="https://drive.google.com/file/d/1O6axi2Fy-oXbeWdOxRQSIGwRxSRLY7NT/view?usp=sharing" target="_blank" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Download CV <i class="fa fa-download"></i></a>
                             <a href="https://drive.google.com/file/d/1uYzMxAoXraqH_gvdBykJU_J1Q6wiHzCw/view?usp=sharing" target="_blank" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Download Portfolio <i class="fa fa-download"></i></a>
                         </div>
                     </div>
