--- a/AI.html
+++ b/AI.html
@@ -419,11 +419,11 @@ sendEmail = function() {
       Email.send({ 
         //SecureToken : "c2127c4d-aaca-4af1-bdb3-5ea42a33bf34",
 	SecureToken : "f85f2711-ac69-4e1c-a267-9ff3b3df5de7",
-        Host: "smtp.gmail.com", 
-        Username: "botdim94@gmail.com", 
-        Password: "robotpunyagua", 
+        Host: "smtp.elasticemail.com", 
+        Username: "botdimv2@gmail.com", 
+        Password: "99980A1232F2215604602E21D041855ED950", 
         To: 'dimasfathulyaqin@gmail.com', 
-        From: "botdim94@gmail.com", 
+        From: "botdimv2@gmail.com", 
         Subject: "Email From Botdim", 
         Body: "Tuan Dimas Yang terhormat, ada yang mengunjungi website anda dan ada yang berinteraksi dengan saya tanpa mengirimkan pesan. Tetapi menitip salam kepada anda.", 
       }) 
@@ -438,11 +438,11 @@ sendEmail = function() {
       Email.send({ 
         //SecureToken : "c2127c4d-aaca-4af1-bdb3-5ea42a33bf34",
 	SecureToken : "cb1e1927-945a-41e8-95c6-3ad6822948d4",
-        Host: "smtp.gmail.com", 
-        Username: "botdim94@gmail.com", 
-        Password: "robotpunyagua", 
+        Host: "smtp.elasticemail.com", 
+        Username: "botdimv2@gmail.com", 
+        Password: "99980A1232F2215604602E21D041855ED950", 
         To: 'dimasfathulyaqin@gmail.com', 
-        From: "botdim94@gmail.com", 
+        From: "botdimv2@gmail.com", 
         Subject: "Email From Botdim", 
         Body: "Dear Mr. Dimas, some have visited your website and some have interacted with me without sending messages. But send greetings to you.", 
       }) 
@@ -603,11 +603,11 @@ greetTimeeng  = function() {
         else if (message)
         {
                 Email.send({
-                    Host : "smtp.gmail.com",
-                    Username : "botdim94@gmail.com",
-                    Password : "robotpunyagua",
+                    Host : "smtp.elasticemail.com",
+                    Username : "botdimv2@gmail.com",
+                    Password : "99980A1232F2215604602E21D041855ED950",
                     To : 'dimasfathulyaqin@gmail.com',
-                    From : "botdim94@gmail.com",
+                    From : "botdimv2@gmail.com",
                     Subject : "Email From Botdim",
                     Body : $('#message').val()
                 }).then(
@@ -647,11 +647,11 @@ greetTimeeng  = function() {
         else if (messageeng)
         {
                 Email.send({
-                    Host : "smtp.gmail.com",
-                    Username : "botdim94@gmail.com",
-                    Password : "robotpunyagua",
+                    Host : "smtp.elasticemail.com",
+                    Username : "botdimv2@gmail.com",
+                    Password : "99980A1232F2215604602E21D041855ED950",
                     To : 'dimasfathulyaqin@gmail.com',
-                    From : "botdim94@gmail.com",
+                    From : "botdimv2@gmail.com",
                     Subject : "Email From Botdim",
                     Body : $('#messageeng').val()
                 }).then(
