--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                                      <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                        <h4>Universitas (University) <br> <a href="#">Universitas Nasional</a></h4>
 					     <div class="mh-eduyear">Jakarta</div>
-                                       <div class="mh-eduyear">2018</div>
+                                       <div class="mh-eduyear">2018-2021</div>
                                        <p>Information System degree or IT</p>
                                    </div> 
                                     <!-- Education Institutes-->
